--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ mypy = "^1.11.2"
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.3"
 python-dateutil = "^2.9.0.post0"
+pytest-cov = "^5.0.0"
 
 [build-system]
 requires = ["poetry-core"]
